[ephemeralForTest] index build cleanup fails with invariant if WUOW throws WCE at commit time

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc2, 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v5.0
    • Execution Team 2021-05-31
    • 129
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When an index build is aborted, it removes the temporary record stores for the hybrid index build.

      If the storage transaction for removing the temporary record store is interrupted, the TemporaryKVRecordStore should reset its internal "finalized" flag in a rollback handler. However, the internal flag may not get reset if we get a WriteConflictException while trying to committing a WriteUnitOfWork in the ephemeralForTest storage engine (this is not possible with the default WiredTiger storage engine).

      On a subsequent attempt to finalize the temporary record store, the server will fail this invariant.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: