SERVER-57231 TemporaryKVRecordStore sets finalized flag in commit handler