src/mongo/db/storage/kv/temporary_kv_record_store.cpp
@@ -52,13 +52,14 @@ void TemporaryKVRecordStore::finalizeTemporaryTable(OperationContext* opCtx,
                                                     FinalizationAction action) {
     invariant(!_recordStoreHasBeenFinalized);
 
-    _recordStoreHasBeenFinalized = true;
-
     // This function is added as an onCommit() handler in certain places, at which point it is not
     // possible to get a WriteConflictException. We're only concerned when calling this function in
     // a WriteUnitOfWork that can still be rolled back.
     if (opCtx->recoveryUnit()->isActive()) {
-        opCtx->recoveryUnit()->onRollback([this]() { _recordStoreHasBeenFinalized = false; });
+        opCtx->recoveryUnit()->onCommit(
+            [this](boost::optional<Timestamp>) { _recordStoreHasBeenFinalized = true; });
+    } else {
+        _recordStoreHasBeenFinalized = true;
     }
 
     if (action == FinalizationAction::kKeep)
